agregando config en settings y edit de views productos

--- a/templatedjango/apptemplate/templates/productos/productos.html
+++ b/templatedjango/apptemplate/templates/productos/productos.html
@@ -19,7 +19,7 @@
 
                         {% csrf_token %}
 
-                        <input type="hidden" name="guardar" value="guardar">
+                        <input type="hidden" name="guardar" value="guardar" enctype="multipart/form-data">
                         <div class="form-group">
 
 
