cambios en la vista productos

--- a/templatedjango/apptemplate/templates/productos/productos.html
+++ b/templatedjango/apptemplate/templates/productos/productos.html
@@ -262,11 +262,9 @@
 
                                     {% for mostrar in form  %}
 
-                                    <label for="{{form.auto_id}}" class="custom-file-label">{{form.label}}</label>  
+                                    <label for="{{form.auto_id}}" class="custom-file-label">sube una imagen</label>  
                                         {{form}}
                                     {% endfor %}
-                                    
-
                                     
                                 </div>                                
                             </div>
