--- a/templatedjango/apptemplate/templates/produccion/produccion.html
+++ b/templatedjango/apptemplate/templates/produccion/produccion.html
@@ -36,7 +36,7 @@
                         </div>
 
                         <div class="form-group">
-                            <select class="form-control selectpicker" name="nombre_productos" id="select_producto" required>
+                            <select class="form-control" name="nombre_productos" id="select_producto" required>
                                 <option id="desactivar" disabled='disabled' selected='selected'> Seleccionar Productos
                                 </option>
                                 {% for nombre in nombre_productos  %}
