--- a/templatedjango/apptemplate/templates/productos/listado_productos.html
+++ b/templatedjango/apptemplate/templates/productos/listado_productos.html
@@ -8,26 +8,174 @@
 
 <div class="row">
 
-    {% for mostrar in productos  %}
-   
-    <div class="col-xl-3">
-        <div class="card shadow p-3 mb-5 bg-white rounded border">
+  {% for mostrar in productos  %}
 
-            <img class="card-img-top" src="{{mostrar.imagen.url}}" alt="Card image cap">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              <a href="#" class="btn btn-outline-primary">Ver mas</a>
-            </div>
+  <div class="col-xl-3">
+    <div class="card shadow p-3 mb-5 bg-white rounded border">
 
+      <img class="card-img-top img-thumbnail" src="{{mostrar.imagen.url}}" alt="Card image cap">
+      <div class="card-body">
+        <div class="row">
+          <div class="form-group col-xl-12 card-title">
+            <h4>El nombre de la planta</h3>
           </div>
-          
+
+          <div class="form-group col-xl-8">
+            <input class="form-control text-center text-primary" type="text" placeholder="55.000" readonly>
+          </div>
+
+          <div class="form-group col-xl-12">
+
+            <button type="button" class="form-control btn btn-outline-info float-right" data-toggle="modal"
+              data-target="#exampleModalCenter">Ver Mas!</button>
+            <!-- Modal -->
+            <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
+              aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+
+              <div class="modal-dialog modal-dialog-centered modal-xl" role="document">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLongTitle">¡Añada el Nombre
+                      de un Producto Nuevo!</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+
+                    <div class="container rounded">
+
+                      <div class="row">
+
+                        <div class="col-sm-12 col-md-12 col-lg-12 col-xl-4">
+
+                          <div class="card shadow p-3 mb-5 bg-white rounded" style="border:none;">
+
+                            <div class="card-body">
+
+                              <h5 class="card-title">Nombre del Producto!</h5>
+
+                              <form action="" method="post">
+
+                                <!-- {% csrf_token %} -->
+
+                                <input type="hidden" name="guardar" value="guardar">
+                                <div class="form-group">
+
+                                  <div class="form-group">
+
+                                    <select class="form-control selectpicker" name="categoria"
+                                      title="Selecione una categoría">
+
+                                      <option option id="" value="Tunas">Tunas</option>
+                                      <option option id="" value="Suculentas">
+                                        Suculentas</option>
+                                      <option option id="" value="Plantas Ornamentales">
+                                        Plantas Ornamentales
+                                      </option>
+
+
+                                    </select>
+
+                                  </div>
+
+                                  <div class="form-group">
+
+                                    <input type="text" class="form-control" name="producto"
+                                      placeholder="Nombre del Producto" required>
+
+                                  </div>
+
+                                </div>
+
+                                <button type="submit" class="btn btn-outline-info float-right">Agregar</button>
+
+                              </form>
+
+                            </div>
+
+                          </div>
+
+                        </div>
+
+                        <div class="col-sm-12 col-md-12 col-lg-12 col-xl-8 card shadow p-3 mb-5 bg-white rounded"
+                          style="border:none;">
+
+                          <table id="example" class="tablita table  table-hover table-bordered  display nowrap"
+                            cellspacing="0" width="100%">
+                            <thead>
+                              <tr>
+                                <th style="color: #A3A6B4;">Producto</th>
+                                <th style="color: #A3A6B4;">Categoría</th>
+                                <th style="color: #A3A6B4;">Acciones</th>
+                              </tr>
+                            </thead>
+                            <tbody>
+
+                              <tr>
+                                <td class="small" id=""></td>
+                                <td class="small"></td>
+
+                                <!-- codigo para el boton de editar 
+                                                                -------------------------------------------------- -->
+                                <td class="small">
+                                  {% load static %}
+                                  <i style="color: white;" type="button" data-toggle="modal"
+                                    data-target="#editar{{insumo.id}}"><i><img
+                                        src="{% static '/assets/icons/icon_edit.svg' %}" alt=""></i></i>
+
+                                  <!-- codigo para el boton de borrar  -->
+                                  <!-- -------------------------------------------- -->
+                                  <!-- Button trigger modal -->
+                                  <i style="color: white; padding:0 10px ;" type="button" data-toggle="modal"
+                                    data-target="#borrar{{compra.id_detalles_compras}}">
+                                    {% load static %}
+                                    <img src="{% static '/assets/icons/circle-remove.svg' %}" alt="">
+                                  </i>
+
+                                </td>
+
+                              </tr>
+
+
+
+                            </tbody>
+                            <tfoot>
+                              <tr>
+                                <th style="color: #A3A6B4;">Producto</th>
+                                <th style="color: #A3A6B4;">Categoría</th>
+                                <th style="color: #A3A6B4;">Acciones</th>
+                              </tr>
+                            </tfoot>
+                          </table>
+
+                        </div>
+                      </div>
+
+                    </div>
+
+
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-outline-danger" data-dismiss="modal">Cerrar</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+
     </div>
 
-    
-    {% endfor %}
+  </div>
 
-    <!-- <div class="col-xl-12">
+
+  {% endfor %}
+
+  <!-- <div class="col-xl-12">
         <h1>{{productos}}</h1>
     </div> -->
 </div>
