cambios en vista productos y lista productos con gitignore

--- a/templatedjango/apptemplate/templates/productos/productos.html
+++ b/templatedjango/apptemplate/templates/productos/productos.html
@@ -302,7 +302,8 @@
                             form = document.getElementById('id_form')
                             button = document.getElementById('enviar_principal')
 
-                            categoria.addEventListener("click", function () {
+                            button.addEventListener("click", function () {
+                                alert(' Desea guardar este producto?. ')
                                 send_form(form)
                             });
                             
