--- a/templatedjango/apptemplate/templates/productos/listado_productos.html
+++ b/templatedjango/apptemplate/templates/productos/listado_productos.html
@@ -36,11 +36,11 @@
       <div class="card-body">
         <div class="row">
           <div class="form-group col-xl-12 card-title">
-            <h4>El nombre de la planta</h3>
+            <h4>{{mostrar.id_nombre_producto.nombre_productos}}</h3>
           </div>
 
           <div class="form-group col-xl-8">
-            <input class="form-control text-center text-primary" type="text" placeholder="55.000" readonly>
+            <input class="form-control text-center text-primary" type="text" placeholder="{{mostrar.precio}}" readonly>
           </div>
 
           <div class="form-group col-xl-12">
