cambios en la vista de listado productos

--- a/templatedjango/apptemplate/templates/productos/productos.html
+++ b/templatedjango/apptemplate/templates/productos/productos.html
@@ -272,7 +272,7 @@
                             <div class="form-group">
 
                                 <textarea class="form-control" id="" rows="3"
-                                    placeholder="Ingrese una descripción" name="descripcion"></textarea>
+                                    placeholder="Ingrese una descripción" name="descripcion" required></textarea>
 
                             </div>
 
